support getting layout infomation from DB layout string. masked the error messages with message not so frighten.

--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 21 12:39:16 EST 2013
+#Fri Feb 22 12:58:08 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -40,10 +40,10 @@ entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
 entity_tag_create=Create a New Tag\!
 entity_update=Update {0}
-error_dataaccessfailure_problemdescription=Sorry, a problem occurred while accessing the database.
-error_dataaccessfailure_title=Data access failure
-error_resourcenotfound_problemdescription=Sorry, we did not find the resource you were looking for.
-error_resourcenotfound_title=Requested Resource Not Found
+error_dataaccessfailure_problemdescription=The back end database is doing back up, please try it later.
+error_dataaccessfailure_title=Database Maintaining
+error_resourcenotfound_problemdescription=The webpage you are visiting is not initialized yet. please try agian, or register it now\!
+error_resourcenotfound_title=Resource Not Initialized Yet
 error_uncaughtexception_problemdescription=The webpage you are visiting is empty, please try agian, or register it now\!
 error_uncaughtexception_title=Empty Web Page
 exception_cookie=Cookies
