--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 21 12:41:35 EST 2013
+#Fri Feb 22 12:56:45 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -40,10 +40,10 @@ entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
 entity_tag_create=\u65B0\u52A0\u4E00\u4E2A\u6807\u7B7E\uFF01
 entity_update=\u4FEE\u6539{0}
-error_dataaccessfailure_problemdescription=Sorry, a problem occurred while accessing the database.
-error_dataaccessfailure_title=Data access failure
-error_resourcenotfound_problemdescription=Sorry, we did not find the resource you were looking for.
-error_resourcenotfound_title=Requested Resource Not Found
+error_dataaccessfailure_problemdescription=\u6B63\u5728\u8FDB\u884C\u540E\u53F0\u6570\u636E\u5E93\u5B89\u5168\u5907\u4EFD\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5.
+error_dataaccessfailure_title=\u6B63\u5728\u5907\u4EFD\u6570\u636E\u5E93
+error_resourcenotfound_problemdescription=\u60A8\u6240\u5B9A\u4F4D\u7684\u7F51\u9875\u5C1A\u672A\u542F\u7528\uFF0C\u8BF7\u91CD\u65B0\u5B9A\u4F4D\uFF0C\u6216\u7ACB\u5373\u62A2\u6CE8\u8BE5\u7F51\u9875\u3002
+error_resourcenotfound_title=\u8BE5\u4F4D\u7F6E\u5C1A\u672A\u542F\u7528
 error_uncaughtexception_problemdescription=\u60A8\u6240\u5B9A\u4F4D\u7684\u7F51\u9875\u5C1A\u672A\u88AB\u4F7F\u7528\uFF0C\u8BF7\u91CD\u65B0\u5B9A\u4F4D\uFF0C\u6216\u7ACB\u5373\u62A2\u6CE8\u8BE5\u7F51\u9875\u3002
 error_uncaughtexception_title=\u7A7A\u767D\u7F51\u9875
 exception_cookie=Cookies
@@ -76,7 +76,7 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u4F55\u4E0D\u731B\u51FB\u53F3\u8FB9\u7684\u6309\u94AE\uFF0C\u8DDF\u670B\u53CB\u7ACB\u5373\u5206\u4EAB\uFF01
+pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u4F55\u4E0D\u731B\u51FB\u53F3\u8FB9\u7684\u6309\u94AE\uFF0C\u7ACB\u523B\u8DDF\u670B\u53CB\u5206\u4EAB\uFF01
 public=\u516C\u5171
 publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u80FD\u81EA\u52A8\u66F4\u65B0\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF08\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF09\uFF0C\u5C31\u662F\u8FD9\u513F\u4E86\uFF01
 security_login=\u767B\u5F55
