layout support final commit.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 22 12:56:45 EST 2013
+#Sat Feb 23 23:18:05 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -62,10 +62,14 @@ global_language_chinese=\u4E2D\u6587
 global_language_english=English
 global_language_french=Fran\u00E7ais
 global_language_switch=Switch language to {0}
+global_menu_accountsManage=\u7BA1\u7406\u6211\u7684\u7528\u6237\u4FE1\u606F
+global_menu_contentsManage=\u7BA1\u7406\u6211\u53D1\u5E03\u7684\u5185\u5BB9
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_readmore=>>>
+global_menu_resetView=\u4EE5\u9ED8\u8BA4\u987A\u5E8F\u663E\u793A\u6240\u6709\u7684\u6807\u7B7E
+global_menu_tagsManage=\u7BA1\u7406\u6211\u7684\u6807\u7B7E
 global_sponsored=Sponsored by SpringSource
 global_theme=\u754C\u9762\u98CE\u683C
 global_theme_alt=alt
