--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 22 12:58:08 EST 2013
+#Sat Feb 23 23:18:05 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -62,10 +62,14 @@ global_language_chinese=\u4E2D\u6587
 global_language_english=English
 global_language_french=Fran\u00E7ais
 global_language_switch=Switch language to {0}
+global_menu_accountsManage=Manage my account
+global_menu_contentsManage=Manage my contents
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_readmore=>>>
+global_menu_resetView=Display all tags in a default order
+global_menu_tagsManage=Manage my tags
 global_sponsored=Sponsored by SpringSource
 global_theme=Theme
 global_theme_alt=alt
