bug fixing (added soemting in end, so I know when should a tags string shown.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 21 17:27:01 EST 2013
+#Sun Feb 24 16:34:06 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -98,3 +98,4 @@ relayout_move_left=\u5411\u5DE6\u79FB
 relayout_move_right=\u5411\u53F3\u79FB
 relayout_move_up=\u5411\u4E0A\u79FB
 relayout_reset=\u91CD\u65B0\u5E03\u5C40
+relayout_submit=\u786E\u5B9A
