--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 21 17:27:01 EST 2013
+#Sun Feb 24 16:34:06 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -98,3 +98,4 @@ relayout_move_left=move to left
 relayout_move_right=move to right
 relayout_move_up=move up
 relayout_reset=relayout
+relayout_submit=Submit
