--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Feb 23 23:18:05 EST 2013
+#Mon Feb 25 11:03:46 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -25,6 +25,7 @@ button_save=Save
 button_showcookie=Show Cookie
 button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
+button_signup=Sign Up
 button_submit=Submit
 button_update=Update
 contributeContent=I just got something\!
@@ -92,6 +93,7 @@ security_login_message=Have no account yet?  Click the 'I agree' in right side a
 security_login_title=Registered User Login Here
 security_login_title2=New User Go Here
 security_login_unsuccessful=Your login attempt was not successful, try again. Reason\: 
+security_login_userlicence=User Licence
 security_logout=Logout
 security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
 selenium_menu_test_suite=Test Suite
