when account already used, give right infomation

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 25 11:03:46 EST 2013
+#Mon Feb 25 16:42:42 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -31,7 +31,7 @@ button_update=Update
 contributeContent=\u6211\u6765\u52A0\u4E00\u4E2A\uFF01
 entity_create=\u6DFB\u52A0\u65B0\u7684{0}
 entity_delete=Delete {0}
-entity_delete_confirm=Are you sure want to delete this item?
+entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
 entity_dependency_required=The following dependencies need to be created first\:
 entity_find=Find {0}
 entity_list_all=List all {0}
@@ -56,7 +56,7 @@ field_invalid_email=Please enter a valid email
 field_invalid_integer=Integer numbers only
 field_invalid_number=Number with \\'-\\' or \\'.\\' allowed
 field_required=required
-field_simple_validation=Enter {0} {1}
+field_simple_validation=\u8F93\u5165{0} {1}
 global_generic={0}
 global_language=\u8BED\u8A00
 global_language_chinese=\u4E2D\u6587
@@ -84,6 +84,7 @@ list_size=List results per page\:
 pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u4F55\u4E0D\u731B\u51FB\u53F3\u8FB9\u7684\u6309\u94AE\uFF0C\u7ACB\u523B\u8DDF\u670B\u53CB\u5206\u4EAB\uFF01
 public=\u516C\u5171
 publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u80FD\u81EA\u52A8\u66F4\u65B0\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF08\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF09\uFF0C\u5C31\u662F\u8FD9\u513F\u4E86\uFF01
+security_create_unsuccessful=\u8BE5\u7528\u6237\u540D\u5DF2\u7ECF\u88AB\u6CE8\u518C\uFF0C\u8BF7\u9009\u62E9\u65B0\u7684\u7528\u6237\u540D\uFF0C\u518D\u6B21\u5C1D\u8BD5\u3002
 security_login=\u7528\u6237\u767B\u5F55
 security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
@@ -99,7 +100,7 @@ security_signup_message=This is for new user, the following is our aggreement \:
 selenium_menu_test_suite=Test Suite
 webflow_endstate_message=\u8FD9\u5DF2\u7ECF\u662F\u6700\u540E\u4E86
 webflow_endstate_title=Spring Web Flow - End State
-webflow_menu_enter=Enter {0} flow
+webflow_menu_enter=\u8F93\u5165{0} flow
 webflow_state1_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
 webflow_state1_title=Spring Web Flow - View State One
 webflow_state2_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
