--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 25 11:03:46 EST 2013
+#Mon Feb 25 16:44:30 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -84,6 +84,7 @@ list_size=List results per page\:
 pleaseAddSomeContentHere=Found some thing good? Why not click and share with friends right away\!
 public=public
 publicDescription=Present Filtered News For Special Person, Manage Persional Bookmarks On Cloud, Share Useful Stuff with Team and Friends, And More... 
+security_create_unsuccessful=Sorry, this user name is already regestered, please try an other one.
 security_login=Login
 security_login_form_name=Name
 security_login_form_name_message=Enter your name
