--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Created by JInto - www.guh-software.de
-#Sun Feb 24 16:34:06 EST 2013
+#Updated at Mon Feb 25 17:09:40 EST 2013
+#Mon Feb 25 17:09:40 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -61,6 +61,7 @@ label_com_aeiou_bigbang_domain_useraccount_name=\u540D\u5B57 *
 label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=\u8981\u6C42\u85AA\u6C34
+label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_public_balance=\u60A8\u7684\u8D26\u6237\u4F59\u989D\uFF1A{0}\u91D1\u5E01
 label_public_expectedSalary=\u85AA\u6C34\u8981\u6C42\uFF1A{0}\u91D1\u5E01/\u6708
