added default tags for user

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 25 16:42:42 EST 2013
+#Tue Feb 26 17:13:08 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -12,6 +12,10 @@ Remark=\u8BC4\u8BBA
 SHOW_TO_EVERY_ONE=\u6240\u6709\u4EBA\u90FD\u80FD\u53EF\u89C1
 Twitter=\u63A8\u7279
 User\ Account=\u7528\u6237
+admin_suggested_tag1=\u5B9E\u7528\u7F51\u7AD9
+admin_suggested_tag2=\u83DC\u8C31/\u5BB6\u52A1
+admin_suggested_tag3=\u8981\u5C55\u793A\u7684\u7167\u7247
+admin_suggested_tag4=\u5DE5\u4F5C/\u9879\u76EE\u76F8\u5173
 agree=\u4E25\u91CD\u540C\u610F\uFF0C\u5F00\u59CB\u6CE8\u518C\uFF01
 allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
@@ -29,6 +33,7 @@ button_signup=\u7528\u6237\u6CE8\u518C
 button_submit=\u767B\u5F55
 button_update=Update
 contributeContent=\u6211\u6765\u52A0\u4E00\u4E2A\uFF01
+contributeTwitter=\u6211\u6765\u5199\u4E00\u4E2A\uFF01
 entity_create=\u6DFB\u52A0\u65B0\u7684{0}
 entity_delete=Delete {0}
 entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
@@ -68,6 +73,7 @@ global_menu_contentsManage=\u7BA1\u7406\u6211\u53D1\u5E03\u7684\u5185\u5BB9
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
+global_menu_newnote=\u4EB2\u81EA\u52A8\u624B\uFF0C\u5199\u70B9\u4E1C\u897F\uFF01
 global_menu_readmore=>>>
 global_menu_resetView=\u4EE5\u9ED8\u8BA4\u987A\u5E8F\u663E\u793A\u6240\u6709\u7684\u6807\u7B7E
 global_menu_tagsManage=\u7BA1\u7406\u6211\u7684\u6807\u7B7E
@@ -90,7 +96,7 @@ security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
 security_login_form_password=\u5BC6\u7801
 security_login_form_password_message=\u8BF7\u5728\u6B64\u8BBE\u7F6E\u4E00\u4E2A\u4E0D\u5C11\u4E8E4\u4F4D\u7684\u5BC6\u7801
-security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684[\u4E25\u91CD\u540C\u610F]\u94FE\u63A5\u95EA\u7535\u6CE8\u518C\u5427\uFF01
+security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684 [\u4E25\u91CD\u540C\u610F] \u94FE\u63A5\u95EA\u7535\u6CE8\u518C\u5427\uFF01
 security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
 security_login_title2=\u65B0\u7528\u6237\u8BF7\u770B\u8FC7\u6765
 security_login_unsuccessful=\u4F60\u7684\u767B\u5F55\u8FC7\u7A0B\u672A\u80FD\u6210\u529F, \u8BF7\u67E5\u770B\u539F\u56E0\u540E\u518D\u6B21\u5C1D\u8BD5\u3002\u539F\u56E0\uFF1A 
