--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 25 16:44:30 EST 2013
+#Tue Feb 26 17:13:08 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -12,6 +12,10 @@ Remark=Remark
 SHOW_TO_EVERY_ONE=visible to everyone.
 Twitter=Twitter
 User\ Account=User Account
+admin_suggested_tag1=Useful Websites
+admin_suggested_tag2=Good Recipes
+admin_suggested_tag3=Photos for Show
+admin_suggested_tag4=Info for Project Team
 agree=I Agree, Start Signup\!
 allcontents=All Contents
 button_cancel=Cancel
@@ -29,6 +33,7 @@ button_signup=Sign Up
 button_submit=Submit
 button_update=Update
 contributeContent=I just got something\!
+contributeTwitter=I'm gonna write somthing\!
 entity_create=Create new {0}
 entity_delete=Delete {0}
 entity_delete_confirm=Are you sure want to delete this item?
@@ -68,6 +73,7 @@ global_menu_contentsManage=Manage my contents
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
+global_menu_newnote=write down something.
 global_menu_readmore=>>>
 global_menu_resetView=Display all tags in a default order
 global_menu_tagsManage=Manage my tags
