fixed a few bugs, adjust layoutstring when deleting a tag. todo: should adjust layout string when update a tag.

--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 26 17:13:08 EST 2013
+#Mon Mar 04 14:10:30 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -22,7 +22,7 @@ button_cancel=Cancel
 button_end=End
 button_find=Find
 button_home=Home
-button_myhome=My Home
+button_myhome=ma page d'accueil
 button_proceed=Proceed
 button_reset=Reset
 button_save=Save
@@ -91,8 +91,8 @@ pleaseAddSomeContentHere=Found some thing good? Why not click and share with fri
 public=public
 publicDescription=Present Filtered News For Special Person, Manage Persional Bookmarks On Cloud, Share Useful Stuff with Team and Friends, And More... 
 security_create_unsuccessful=Sorry, this user name is already regestered, please try an other one.
-security_login=Login
-security_login_form_name=Name
+security_login=Identifiez-Vous
+security_login_form_name=Nom
 security_login_form_name_message=Enter your name
 security_login_form_password=Password
 security_login_form_password_message=Enter your password (no less then 4 characters please)
@@ -101,7 +101,7 @@ security_login_title=Registered User Login Here
 security_login_title2=New User Go Here
 security_login_unsuccessful=Your login attempt was not successful, try again. Reason\: 
 security_login_userlicence=User Licence
-security_logout=Logout
+security_logout=D\u00E9connexion
 security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
 selenium_menu_test_suite=Test Suite
 webflow_endstate_message=You have now reached the end of this flow.
