added a resource which is not used now, but will be used after I add a "owner" property for the BigTag.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,9 +1,10 @@
-#Updated at Mon Feb 25 17:09:40 EST 2013
-#Mon Feb 25 17:09:40 EST 2013
+#Created by JInto - www.guh-software.de
+#Tue Mar 05 12:04:22 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
-label_com_aeiou_bigbang_domain_bigtag_authority=Authority
+label_com_aeiou_bigbang_domain_bigtag_authority=\u6743\u9650
 label_com_aeiou_bigbang_domain_bigtag_id=Id
+label_com_aeiou_bigbang_domain_bigtag_owner=\u4F5C\u8005
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
@@ -51,7 +52,7 @@ label_com_aeiou_bigbang_domain_twitter_twitdate=Twit Date
 label_com_aeiou_bigbang_domain_twitter_twitent=Twitent
 label_com_aeiou_bigbang_domain_twitter_version=Version
 label_com_aeiou_bigbang_domain_useraccount=User Account
-label_com_aeiou_bigbang_domain_useraccount_balance=Balance
+label_com_aeiou_bigbang_domain_useraccount_balance=\u8D26\u6237
 label_com_aeiou_bigbang_domain_useraccount_description=\u4E2A\u6027\u7B7E\u540D
 label_com_aeiou_bigbang_domain_useraccount_email=\u7535\u5B50\u90AE\u7BB1
 label_com_aeiou_bigbang_domain_useraccount_id=Id
