--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,9 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 04 13:26:09 EST 2013
+#Tue Mar 05 12:03:48 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_id=Id
+label_com_aeiou_bigbang_domain_bigtag_owner=Owner
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
