--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 05 12:04:22 EST 2013
+#Thu Mar 07 10:44:44 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u6743\u9650
@@ -69,7 +69,7 @@ label_public_expectedSalary=\u85AA\u6C34\u8981\u6C42\uFF1A{0}\u91D1\u5E01/\u6708
 label_public_firesomeone=\u4E0D\u518D\u9700\u8981\u4ED6\u4E86\uFF0C\u62B1\u6B49\uFF01
 label_public_hiresomeone=\u8FD9\u5BB6\u4F19\u5F88\u68D2\uFF0C\u96C7\u4ED6\u4E3A\u6211\u7684\u7A7A\u95F4\u5DE5\u4F5C
 label_public_index=\u6B22\u8FCE\u6765{0}\u7684\u7A7A\u95F4----{1}
-label_rememberme=\u8BB0\u4F4F\u6211
+label_rememberme=\u8BB0\u4F4F\u7528\u6237\u540D\u548C\u5BC6\u7801
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
