added logic for log in onsuccess page and log out on success page.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 07 10:44:44 EST 2013
+#Tue Mar 12 21:24:01 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u6743\u9650
@@ -24,7 +24,7 @@ label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u68
 label_com_aeiou_bigbang_domain_content_conentcache=\u7F51\u9875\u5185\u5BB9\u62F7\u8D1D
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_plural=Contents
-label_com_aeiou_bigbang_domain_content_publisher=\u5927\u4E3B\u7F16
+label_com_aeiou_bigbang_domain_content_publisher=\u91C7\u7F16
 label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740 *
 label_com_aeiou_bigbang_domain_content_title=\u7F51\u9875\u5185\u5BB9\u6807\u9898 *
 label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u4E2A\u4EBA\u7A7A\u95F4\u6807\u7B7E
