modified to display "ShareTheGoodOnes" on title.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 12 21:24:01 EDT 2013
+#Sat Mar 16 18:29:20 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u6743\u9650
@@ -45,11 +45,14 @@ label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
 label_com_aeiou_bigbang_domain_twitter=Twitter
+label_com_aeiou_bigbang_domain_twitter_authority=\u5BF9\u8C01\u53EF\u89C1
 label_com_aeiou_bigbang_domain_twitter_id=Id
 label_com_aeiou_bigbang_domain_twitter_plural=Twitters
 label_com_aeiou_bigbang_domain_twitter_publisher=Publisher
-label_com_aeiou_bigbang_domain_twitter_twitdate=Twit Date
-label_com_aeiou_bigbang_domain_twitter_twitent=Twitent
+label_com_aeiou_bigbang_domain_twitter_twitdate=\u6700\u540E\u4FEE\u6539\u65F6\u95F4
+label_com_aeiou_bigbang_domain_twitter_twitent=\u5185\u5BB9
+label_com_aeiou_bigbang_domain_twitter_twittertag=\u7C7B\u522B
+label_com_aeiou_bigbang_domain_twitter_twtitle=\u6807\u9898
 label_com_aeiou_bigbang_domain_twitter_version=Version
 label_com_aeiou_bigbang_domain_useraccount=User Account
 label_com_aeiou_bigbang_domain_useraccount_balance=\u8D26\u6237
