--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 05 12:03:48 EST 2013
+#Sat Mar 16 18:29:20 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -45,11 +45,14 @@ label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
 label_com_aeiou_bigbang_domain_twitter=Twitter
+label_com_aeiou_bigbang_domain_twitter_authority=Authority
 label_com_aeiou_bigbang_domain_twitter_id=Id
 label_com_aeiou_bigbang_domain_twitter_plural=Twitters
 label_com_aeiou_bigbang_domain_twitter_publisher=Publisher
-label_com_aeiou_bigbang_domain_twitter_twitdate=Twit Date
-label_com_aeiou_bigbang_domain_twitter_twitent=Twitent
+label_com_aeiou_bigbang_domain_twitter_twitdate=Last Edit Date
+label_com_aeiou_bigbang_domain_twitter_twitent=Content
+label_com_aeiou_bigbang_domain_twitter_twittertag=Type
+label_com_aeiou_bigbang_domain_twitter_twtitle=Title
 label_com_aeiou_bigbang_domain_twitter_version=Version
 label_com_aeiou_bigbang_domain_useraccount=User Account
 label_com_aeiou_bigbang_domain_useraccount_balance=Balance
