--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 04 14:10:30 EST 2013
+#Sat Mar 16 20:36:04 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -16,6 +16,10 @@ admin_suggested_tag1=Useful Websites
 admin_suggested_tag2=Good Recipes
 admin_suggested_tag3=Photos for Show
 admin_suggested_tag4=Info for Project Team
+admin_suggested_tag5=Pray
+admin_suggested_tag6=Diary
+admin_suggested_tag7=Think
+admin_suggested_tag8=Experience
 agree=I Agree, Start Signup\!
 allcontents=All Contents
 button_cancel=Cancel
@@ -88,6 +92,7 @@ list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
 pleaseAddSomeContentHere=Found some thing good? Why not click and share with friends right away\!
+pleaseAddSomeTwitterHere=make a pray? write diary? some experience or thought?
 public=public
 publicDescription=Present Filtered News For Special Person, Manage Persional Bookmarks On Cloud, Share Useful Stuff with Team and Friends, And More... 
 security_create_unsuccessful=Sorry, this user name is already regestered, please try an other one.
