--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 26 17:13:08 EST 2013
+#Sat Mar 16 20:39:28 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -16,6 +16,10 @@ admin_suggested_tag1=\u5B9E\u7528\u7F51\u7AD9
 admin_suggested_tag2=\u83DC\u8C31/\u5BB6\u52A1
 admin_suggested_tag3=\u8981\u5C55\u793A\u7684\u7167\u7247
 admin_suggested_tag4=\u5DE5\u4F5C/\u9879\u76EE\u76F8\u5173
+admin_suggested_tag5=\u7948\u7977
+admin_suggested_tag6=\u65E5\u8BB0
+admin_suggested_tag7=\u601D\u60F3
+admin_suggested_tag8=\u7ECF\u9A8C
 agree=\u4E25\u91CD\u540C\u610F\uFF0C\u5F00\u59CB\u6CE8\u518C\uFF01
 allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
@@ -32,8 +36,8 @@ button_showstacktrace=Show Stack Trace
 button_signup=\u7528\u6237\u6CE8\u518C
 button_submit=\u767B\u5F55
 button_update=Update
-contributeContent=\u6211\u6765\u52A0\u4E00\u4E2A\uFF01
-contributeTwitter=\u6211\u6765\u5199\u4E00\u4E2A\uFF01
+contributeContent=\u731B\u51FB\u8FD9\u91CC, \u7ACB\u523B\u8DDF\u5BB6\u4EBA\u670B\u53CB\u5206\u4EAB\uFF01
+contributeTwitter=\u70B9\u8FD9\u91CC\u5199\u4E00\u4E2A\uFF01
 entity_create=\u6DFB\u52A0\u65B0\u7684{0}
 entity_delete=Delete {0}
 entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
@@ -87,7 +91,8 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u4F55\u4E0D\u731B\u51FB\u53F3\u8FB9\u7684\u6309\u94AE\uFF0C\u7ACB\u523B\u8DDF\u670B\u53CB\u5206\u4EAB\uFF01
+pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F
+pleaseAddSomeTwitterHere=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u5199\u4E2A\u65E5\u8BB0\uFF0C\u8BB0\u5F55\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F
 public=\u516C\u5171
 publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u80FD\u81EA\u52A8\u66F4\u65B0\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF08\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF09\uFF0C\u5C31\u662F\u8FD9\u513F\u4E86\uFF01
 security_create_unsuccessful=\u8BE5\u7528\u6237\u540D\u5DF2\u7ECF\u88AB\u6CE8\u518C\uFF0C\u8BF7\u9009\u62E9\u65B0\u7684\u7528\u6237\u540D\uFF0C\u518D\u6B21\u5C1D\u8BD5\u3002
