modified some scipt. script for twitter not added yet. found a bug with script :when log out, relayout was called, donno why.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Mar 16 20:39:28 EDT 2013
+#Sun Mar 17 00:00:06 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -36,8 +36,8 @@ button_showstacktrace=Show Stack Trace
 button_signup=\u7528\u6237\u6CE8\u518C
 button_submit=\u767B\u5F55
 button_update=Update
-contributeContent=\u731B\u51FB\u8FD9\u91CC, \u7ACB\u523B\u8DDF\u5BB6\u4EBA\u670B\u53CB\u5206\u4EAB\uFF01
-contributeTwitter=\u70B9\u8FD9\u91CC\u5199\u4E00\u4E2A\uFF01
+contributeContent=\u731B\u51FB\u8FD9\u91CC\u8DDF\u670B\u53CB\u5BB6\u4EBA\u5206\u4EAB\uFF01
+contributeTwitter=\u5199\u5728\u8FD9\u91CC\u8DDF\u5BB6\u4EBA\u670B\u53CB\u4EA4\u6D41\uFF01
 entity_create=\u6DFB\u52A0\u65B0\u7684{0}
 entity_delete=Delete {0}
 entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
@@ -74,6 +74,7 @@ global_language_french=Fran\u00E7ais
 global_language_switch=Switch language to {0}
 global_menu_accountsManage=\u7BA1\u7406\u6211\u7684\u7528\u6237\u4FE1\u606F
 global_menu_contentsManage=\u7BA1\u7406\u6211\u53D1\u5E03\u7684\u5185\u5BB9
+global_menu_diaryManage=\u7BA1\u7406\u6211\u7684\u7B14\u8BB0
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
@@ -92,7 +93,7 @@ list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
 pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F
-pleaseAddSomeTwitterHere=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u5199\u4E2A\u65E5\u8BB0\uFF0C\u8BB0\u5F55\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F
+pleaseAddSomeTwitterHere=\u60F3\u505A\u4E2A\u7948\u7977\uFF0C\u8BB0\u4E2A\u65E5\u5FD7\uFF0C\u8868\u8FBE\u60F3\u6CD5\uFF0C\u603B\u7ED3\u7ECF\u9A8C\uFF1F
 public=\u516C\u5171
 publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u80FD\u81EA\u52A8\u66F4\u65B0\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF08\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF09\uFF0C\u5C31\u662F\u8FD9\u513F\u4E86\uFF01
 security_create_unsuccessful=\u8BE5\u7528\u6237\u540D\u5DF2\u7ECF\u88AB\u6CE8\u518C\uFF0C\u8BF7\u9009\u62E9\u65B0\u7684\u7528\u6237\u540D\uFF0C\u518D\u6B21\u5C1D\u8BD5\u3002
