--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Mar 16 20:36:04 EDT 2013
+#Sat Mar 16 23:40:32 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -74,6 +74,7 @@ global_language_french=Fran\u00E7ais
 global_language_switch=Switch language to {0}
 global_menu_accountsManage=Manage my account
 global_menu_contentsManage=Manage my contents
+global_menu_diaryManage=Manage my notes
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
