--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,12 +1,12 @@
 #Created by JInto - www.guh-software.de
-#Sat Mar 16 18:29:20 EDT 2013
+#Sun Mar 17 22:39:58 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
-label_com_aeiou_bigbang_domain_bigtag_authority=\u6743\u9650
+label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_bigtag_id=Id
-label_com_aeiou_bigbang_domain_bigtag_owner=\u4F5C\u8005
+label_com_aeiou_bigbang_domain_bigtag_owner=\u4E66\u7B7E/\u65E5\u5FD7
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
-label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
+label_com_aeiou_bigbang_domain_bigtag_tagname=\u540D\u79F0 *
 label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
 label_com_aeiou_bigbang_domain_bigtag_version=Version
 label_com_aeiou_bigbang_domain_circle=Circle
@@ -19,7 +19,7 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
-label_com_aeiou_bigbang_domain_content_authority=\u5BF9\u54EA\u4E9B\u4EBA\u53EF\u89C1
+label_com_aeiou_bigbang_domain_content_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E *
 label_com_aeiou_bigbang_domain_content_conentcache=\u7F51\u9875\u5185\u5BB9\u62F7\u8D1D
 label_com_aeiou_bigbang_domain_content_id=Id
@@ -45,7 +45,7 @@ label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
 label_com_aeiou_bigbang_domain_twitter=Twitter
-label_com_aeiou_bigbang_domain_twitter_authority=\u5BF9\u8C01\u53EF\u89C1
+label_com_aeiou_bigbang_domain_twitter_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_twitter_id=Id
 label_com_aeiou_bigbang_domain_twitter_plural=Twitters
 label_com_aeiou_bigbang_domain_twitter_publisher=Publisher
