--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Mar 17 00:00:06 EDT 2013
+#Mon Mar 18 16:08:41 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -10,7 +10,7 @@ ONLY_FOR_SELECTED_PERSON=\u4EC5\u9009\u4E2D\u7684\u4EBA\u53EF\u89C1
 ONLY_MYSELF_CAN_SEE=\u53EA\u6709\u81EA\u5DF1\u80FD\u770B\u89C1
 Remark=\u8BC4\u8BBA
 SHOW_TO_EVERY_ONE=\u6240\u6709\u4EBA\u90FD\u80FD\u53EF\u89C1
-Twitter=\u63A8\u7279
+Twitter=\u65E5\u5FD7
 User\ Account=\u7528\u6237
 admin_suggested_tag1=\u5B9E\u7528\u7F51\u7AD9
 admin_suggested_tag2=\u83DC\u8C31/\u5BB6\u52A1
@@ -26,7 +26,7 @@ button_cancel=\u53D6\u6D88
 button_end=End
 button_find=Find
 button_home=\u4E3B\u9875
-button_myhome=\u6211\u7684\u4E3B\u9875
+button_myhome={0}\u7684\u7A7A\u95F4
 button_proceed=Proceed
 button_reset=\u6E05\u7A7A
 button_save=\u4FDD\u5B58
