added some view related with the twitter and the remarks. modified some icons on interface. Before modifying the field in Remard, to chang privity into authority, change content into Twitter...

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Mar 18 16:08:41 EDT 2013
+#Tue Mar 19 10:57:57 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -25,6 +25,7 @@ allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
 button_end=End
 button_find=Find
+button_gotohome=\u53BB{0}\u7684\u7A7A\u95F4\u770B\u770B
 button_home=\u4E3B\u9875
 button_myhome={0}\u7684\u7A7A\u95F4
 button_proceed=Proceed
