--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat Mar 16 23:40:32 EDT 2013
+#Tue Mar 19 10:57:57 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -25,6 +25,7 @@ allcontents=All Contents
 button_cancel=Cancel
 button_end=End
 button_find=Find
+button_gotohome=go to {0}'s space
 button_home=Home
 button_myhome=ma page d'accueil
 button_proceed=Proceed
