--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Wed Mar 20 14:57:40 EDT 2013
-#Wed Mar 20 14:57:40 EDT 2013
+#Created by JInto - www.guh-software.de
+#Wed Mar 20 19:23:39 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -72,8 +72,8 @@ label_com_aeiou_bigbang_domain_useraccount_theme=Theme
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_public_balance=\u79EF\u5206\uFF1A{0}\u91D1\u5E01
 label_public_expectedSalary=\u6708\u85AA\uFF1A{0}\u91D1\u5E01
-label_public_firesomeone=\u4E0D\u518D\u9700\u8981\u4ED6\u4E86\uFF0C\u518D\u89C1
-label_public_hiresomeone=\u8FD9\u5BB6\u4F19\u5F88\u68D2\uFF0C\u96C7\u4ED6\u4E3A\u6211\u7684\u7A7A\u95F4\u5DE5\u4F5C
+label_public_firesomeone=\u4E0D\u518D\u5173\u6CE8
+label_public_hiresomeone=\u6DFB\u52A0\u5230\u6211\u7684\u7A7A\u95F4
 label_public_index=\u6B22\u8FCE\u6765{0}\u7684\u7A7A\u95F4----{1}
 label_rememberme=\u8BB0\u4F4F\u7528\u6237\u540D\u548C\u5BC6\u7801
 menu_category_bigtag_label=Big Tag
