--- a/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Mar 17 20:15:55 EDT 2013
+#Wed Mar 20 19:17:09 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -36,11 +36,14 @@ label_com_aeiou_bigbang_domain_customize_id=Id
 label_com_aeiou_bigbang_domain_customize_plural=Customizes
 label_com_aeiou_bigbang_domain_customize_version=Version
 label_com_aeiou_bigbang_domain_remark=Remark
+label_com_aeiou_bigbang_domain_remark_authority=
 label_com_aeiou_bigbang_domain_remark_content=Content
 label_com_aeiou_bigbang_domain_remark_id=Id
 label_com_aeiou_bigbang_domain_remark_plural=Remarks
 label_com_aeiou_bigbang_domain_remark_privilege=Privilege
 label_com_aeiou_bigbang_domain_remark_publisher=Publisher
+label_com_aeiou_bigbang_domain_remark_remarktime=
+label_com_aeiou_bigbang_domain_remark_remarkto=
 label_com_aeiou_bigbang_domain_remark_remarttime=Remart Time
 label_com_aeiou_bigbang_domain_remark_replyto=Reply To
 label_com_aeiou_bigbang_domain_remark_version=Version
