--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,16 +1,18 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 19 10:57:57 EDT 2013
+#Thu Mar 21 11:00:41 EDT 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
 Customize=\u81EA\u5B9A\u4E49
+NotesAndPrays=\u7948\u7977/\u968F\u7B14\u2014{0}
+NotesAndPraysOfFriend=\u7948\u7977/\u968F\u7B14\u2014{0}\u7684\u5BB6\u4EBA\u548C\u670B\u53CB
 ONLY_FOR_SELECTED_PERSON=\u4EC5\u9009\u4E2D\u7684\u4EBA\u53EF\u89C1
 ONLY_MYSELF_CAN_SEE=\u53EA\u6709\u81EA\u5DF1\u80FD\u770B\u89C1
 Remark=\u8BC4\u8BBA
 SHOW_TO_EVERY_ONE=\u6240\u6709\u4EBA\u90FD\u80FD\u53EF\u89C1
-Twitter=\u65E5\u5FD7
+Twitter=\u968F\u7B14
 User\ Account=\u7528\u6237
 admin_suggested_tag1=\u5B9E\u7528\u7F51\u7AD9
 admin_suggested_tag2=\u83DC\u8C31/\u5BB6\u52A1
@@ -25,7 +27,7 @@ allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
 button_end=End
 button_find=Find
-button_gotohome=\u53BB{0}\u7684\u7A7A\u95F4\u770B\u770B
+button_gotohome=\u53BB{0}\u7684\u4E3B\u9875\u770B\u770B
 button_home=\u4E3B\u9875
 button_myhome={0}\u7684\u7A7A\u95F4
 button_proceed=Proceed
@@ -39,7 +41,7 @@ button_submit=\u767B\u5F55
 button_update=Update
 contributeContent=\u731B\u51FB\u8FD9\u91CC\u8DDF\u670B\u53CB\u5BB6\u4EBA\u5206\u4EAB\uFF01
 contributeTwitter=\u5199\u5728\u8FD9\u91CC\u8DDF\u5BB6\u4EBA\u670B\u53CB\u4EA4\u6D41\uFF01
-entity_create=\u6DFB\u52A0\u65B0\u7684{0}
+entity_create=\u6DFB\u52A0{0}
 entity_delete=Delete {0}
 entity_delete_confirm=\u60A8\u786E\u5B9A\u8981\u5220\u9664? 
 entity_dependency_required=The following dependencies need to be created first\:
