--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,11 +1,13 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 19 10:57:57 EDT 2013
+#Thu Mar 21 10:26:50 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
 Circle=Circle
 Content=Content
 Customize=Customize
+NotesAndPrays=Notes and Prays de {0}
+NotesAndPraysOfFriend=Notes and Prays de sami et ...
 ONLY_FOR_SELECTED_PERSON=visible to selected person
 ONLY_MYSELF_CAN_SEE=visible for myself
 Remark=Remark
