changed the position of twitter and bookmark and made the text shorter for display on tablet.

--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 21 10:26:50 EDT 2013
+#Tue Apr 02 17:34:40 EDT 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -81,7 +81,8 @@ global_menu_diaryManage=Manage my notes
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
-global_menu_newnote=write down something.
+global_menu_newbookmark=Found some thing good? Why not click and share with friends right away\! 
+global_menu_newnote=make a pray? write diary? some experience or thought? it's time to write them down.
 global_menu_readmore=>>>
 global_menu_resetView=Display all tags in a default order
 global_menu_tagsManage=Manage my tags
@@ -95,8 +96,6 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-pleaseAddSomeContentHere=Found some thing good? Why not click and share with friends right away\! 
-pleaseAddSomeTwitterHere=make a pray? write diary? some experience or thought?
 public=public
 publicDescription=Present Filtered News For Special Person, Manage Persional Bookmarks On Cloud, Share Useful Stuff with Team and Friends, And More... 
 security_create_unsuccessful=Sorry, this user name is already regestered, please try an other one.
