added a new field for table twitter ----"last updated" so I can list the twitters by the desc order of last updated field.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Mar 20 19:23:39 EDT 2013
+#Tue Apr 09 14:44:33 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -50,6 +50,7 @@ label_com_aeiou_bigbang_domain_remark_version=Version
 label_com_aeiou_bigbang_domain_twitter=Twitter
 label_com_aeiou_bigbang_domain_twitter_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_twitter_id=Id
+label_com_aeiou_bigbang_domain_twitter_lastupdate=\u6700\u540E\u66F4\u65B0
 label_com_aeiou_bigbang_domain_twitter_plural=Twitters
 label_com_aeiou_bigbang_domain_twitter_publisher=Publisher
 label_com_aeiou_bigbang_domain_twitter_twitdate=\u6700\u540E\u4FEE\u6539\u65F6\u95F4
