--- a/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Mar 24 22:43:21 EDT 2013
+#Tue Apr 09 14:44:33 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -50,6 +50,7 @@ label_com_aeiou_bigbang_domain_remark_version=Version
 label_com_aeiou_bigbang_domain_twitter=Twitter
 label_com_aeiou_bigbang_domain_twitter_authority=Authority
 label_com_aeiou_bigbang_domain_twitter_id=Id
+label_com_aeiou_bigbang_domain_twitter_lastupdate=Last Updated
 label_com_aeiou_bigbang_domain_twitter_plural=Twitters
 label_com_aeiou_bigbang_domain_twitter_publisher=Publisher
 label_com_aeiou_bigbang_domain_twitter_twitdate=Last Edit Date
