added a mark time field into Content Table, so in future, I can add functions that need this field.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 09 14:44:33 EDT 2013
+#Tue Apr 09 15:03:06 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
@@ -23,6 +23,7 @@ label_com_aeiou_bigbang_domain_content_authority=\u8C01\u53EF\u4EE5\u770B\u89C1
 label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E *
 label_com_aeiou_bigbang_domain_content_conentcache=\u7F51\u9875\u5185\u5BB9\u62F7\u8D1D
 label_com_aeiou_bigbang_domain_content_id=Id
+label_com_aeiou_bigbang_domain_content_markdate=\u6536\u85CF\u65F6\u95F4
 label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=\u91C7\u7F16
 label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740 *
