--- a/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 09 14:44:33 EDT 2013
+#Tue Apr 09 15:03:06 EDT 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -23,6 +23,7 @@ label_com_aeiou_bigbang_domain_content_authority=Who Can See
 label_com_aeiou_bigbang_domain_content_commonbigtag=Public Space Tag *
 label_com_aeiou_bigbang_domain_content_conentcache=Can Copy The Content Here
 label_com_aeiou_bigbang_domain_content_id=Id
+label_com_aeiou_bigbang_domain_content_markdate=Mark Date
 label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=Publisher
 label_com_aeiou_bigbang_domain_content_sourceurl=Source URL *
